--- a/src/UI.scss
+++ b/src/UI.scss
@@ -167,7 +167,7 @@
       right: 50%;
       transform: translate(50%, 0);
 
-      bottom: 20px;
+      top: 0px;
 
       display: flex;
       justify-content: center;
@@ -175,7 +175,7 @@
       height: 200px;
 
       font-size: 16px;
-      font-weight: 500;
+      font-weight: 600;
 
       color: rgba(255, 255, 255, 0.5);
     }
@@ -222,6 +222,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      overflow: visible;
       gap: 20px;
 
       .wrapper-left {
@@ -241,11 +242,15 @@
 
         border-left: 2.75px solid var(--text-color);
         padding-left: 20px;
+        padding-right: 100px;
+
+        overflow: visible;
 
         .title {
           display: flex;
           flex-direction: row;
-          justify-content: start;
+          justify-content: space-between;
+          align-items: center;
           width: 100%;
           font-size: 54px;
           font-weight: 800;
@@ -257,6 +262,40 @@
           margin-bottom: -15px;
           margin-top: -15px;
 
+          overflow: visible;
+
+          .back-button {
+            overflow: visible;
+            font-family: var(--font-family);
+
+            pointer-events: all;
+            border: none;
+
+            color: white;
+
+            font-size: 18px;
+            font-weight: 500;
+
+            cursor: pointer;
+
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+
+            background-color: #14626a28;
+            backdrop-filter: blur(10px);
+
+            padding: 0px 20px;
+            height: 40px;
+            border-radius: 8px;
+
+            img {
+              width: 14px;
+            }
+          }
+
           &.inactive {
             opacity: 0;
           }
@@ -267,7 +306,6 @@
           gap: 10px;
           justify-content: center;
           /*height: 100%;*/
-          padding-right: 100px;
 
           .desc {
             font-size: 18px;
