--- a/src/UI.scss
+++ b/src/UI.scss
@@ -27,70 +27,6 @@
     }
   }
 
-  .bottom-panel {
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    max-width: 1000px;
-
-    left: 50%;
-    transform: translateX(-50%);
-
-    padding: 20px;
-
-    pointer-events: none;
-
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-
-    .chat-input {
-      flex: 1;
-      border: none;
-      border-radius: 3px;
-      padding: 0 10px;
-
-      font-size: 16px;
-      font-weight: 400;
-
-      font-family: var(--font-family);
-      color: rgba(255, 255, 255, 0.556);
-
-      background-color: #26242672;
-      backdrop-filter: blur(0px);
-      pointer-events: all;
-    }
-
-    .chat-input:focus {
-      outline: none;
-      background-color: #262426;
-      color: rgba(255, 255, 255, 1);
-    }
-
-    .chat-button:hover,
-    .chat-input:focus + .chat-button {
-      background-color: #262426;
-      color: rgba(255, 255, 255, 1);
-    }
-
-    .chat-button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 3px;
-
-      font-size: 16px;
-      font-weight: 400;
-
-      font-family: var(--font-family);
-      color: rgba(255, 255, 255, 0.556);
-
-      background-color: #26242672;
-      backdrop-filter: blur(3px);
-      pointer-events: all;
-      cursor: pointer;
-    }
-  }
-
   .visible-library {
     width: 100vw;
     height: 100vh;
@@ -135,9 +71,22 @@
           transition: all ease var(--transition-delay);
         }
 
+        img {
+          width: 72px;
+          padding: 10px;
+          opacity: 0.225;
+
+          transition: all ease var(--transition-delay);
+        }
+
         &:hover {
           .bx {
             color: var(--text-color);
+            scale: 1.2;
+          }
+
+          img {
+            opacity: 1;
             scale: 1.2;
           }
         }
@@ -284,15 +233,30 @@
             align-items: center;
             gap: 10px;
 
+            margin: 1px;
+
             background-color: #14626a28;
             backdrop-filter: blur(10px);
 
             padding: 0px 20px;
             height: 40px;
-            border-radius: 8px;
+            border-radius: var(--border-radius);
+
+            transition: all ease var(--transition-delay);
 
             img {
               width: 14px;
+            }
+
+            &:hover {
+              background-color: #14616a66;
+              backdrop-filter: blur(10px);
+
+              padding: 10px 20px;
+              outline: 1px solid rgba(255, 255, 255, 0.8);
+              border-radius: var(--border-radius);
+
+              cursor: pointer;
             }
           }
 
@@ -332,7 +296,7 @@
 
               padding: 10px 20px;
 
-              border-radius: 8px;
+              border-radius: var(--border-radius);
               justify-content: space-between;
               align-items: center;
 
@@ -361,7 +325,7 @@
             padding: 20px 20px;
             padding-top: 10px;
 
-            border-radius: 8px;
+            border-radius: var(--border-radius);
             align-items: start;
 
             .info-subtitle {
@@ -390,19 +354,22 @@
                   backdrop-filter: blur(10px);
 
                   padding: 10px 20px;
+                  margin: 1px;
 
-                  border-radius: 8px;
+                  border-radius: var(--border-radius);
 
                   white-space: nowrap;
                   color: var(--text-color);
+
+                  transition: all ease var(--transition-delay);
 
                   &:hover {
                     background-color: rgba(255, 255, 255, 0.164);
                     backdrop-filter: blur(10px);
 
                     padding: 10px 20px;
-                    border: 1px solid rgba(255, 255, 255, 0.8);
-                    border-radius: 8px;
+                    outline: 1px solid rgba(255, 255, 255, 0.8);
+                    border-radius: var(--border-radius);
 
                     cursor: pointer;
                   }
@@ -416,6 +383,282 @@
 
     &.inactive {
       right: -700px;
+    }
+  }
+
+  .chat-container {
+    position: absolute;
+
+    width: 100vw;
+    height: 100vh;
+
+    top: 0;
+    right: 0;
+
+    .chat-form {
+      position: absolute;
+
+      bottom: 20px;
+      right: 50%;
+      transform: translateX(50%);
+      background-color: transparent;
+      width: calc(100% - 40px);
+      max-width: 1024px;
+
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      gap: 20px;
+
+      pointer-events: all;
+
+      .chat-input {
+        flex: 1;
+
+        background-color: #14626a28;
+        backdrop-filter: blur(10px);
+
+        padding: 10px 20px;
+        font-size: 18px;
+        font-weight: 400;
+
+        color: var(--text-color);
+
+        border: none;
+        border-radius: var(--border-radius);
+
+        &:focus {
+          outline: none;
+        }
+      }
+      /*.chat-send {
+        background-color: #14626a28;
+        backdrop-filter: blur(10px);
+
+        padding: 10px 20px;
+        margin: 1px;
+        border: none;
+        border-radius: var(--border-radius);
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+
+        font-size: 18px;
+        font-weight: 400;
+
+        color: var(--text-color);
+
+        img {
+          height: 14px;
+        }
+
+        &:hover {
+          outline: 1px solid var(--text-color);
+          cursor: pointer;
+        }
+      }*/
+      .chat-send {
+        overflow: visible;
+        font-family: var(--font-family);
+
+        pointer-events: all;
+        border: none;
+
+        color: white;
+
+        font-size: 18px;
+        font-weight: 500;
+
+        cursor: pointer;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        margin: 1px;
+
+        background-color: #14626a28;
+        backdrop-filter: blur(10px);
+
+        padding: 0px 20px;
+        height: 40px;
+        border-radius: var(--border-radius);
+
+        transition: all ease var(--transition-delay);
+
+        img {
+          width: 14px;
+        }
+
+        &:hover {
+          background-color: #14616a66;
+          backdrop-filter: blur(10px);
+
+          padding: 10px 20px;
+          outline: 1px solid rgba(255, 255, 255, 0.8);
+          border-radius: var(--border-radius);
+
+          cursor: pointer;
+        }
+      }
+    }
+
+    .show-full-chat {
+      position: absolute;
+      width: 100vw;
+      height: 100vh;
+      opacity: 1;
+      transition: all ease var(--transition-delay);
+      bottom: 0px;
+      pointer-events: all;
+
+      .x-button {
+        position: absolute;
+
+        top: 18px;
+        right: 50%;
+        transform: translateX(50%);
+        width: calc(100% - 40px);
+        max-width: 1024px;
+
+        height: 60px;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: end;
+        align-items: center;
+        border-top-right-radius: var(--border-radius);
+        border-top-left-radius: var(--border-radius);
+
+        background-color: #14626a28;
+        backdrop-filter: blur(10px);
+
+        pointer-events: all;
+
+        .bx {
+          color: var(--text-color);
+          font-size: 36px;
+          padding: 20px;
+
+          transition: all ease var(--transition-delay);
+
+          &:hover {
+            cursor: pointer;
+            scale: 1.3;
+          }
+        }
+      }
+
+      .chat-full {
+        position: absolute;
+
+        bottom: 82px;
+        right: 50%;
+        transform: translateX(50%);
+        width: calc(100% - 40px);
+        max-width: 1024px;
+
+        height: calc(100vh - 160px);
+
+        background-color: #14626a28;
+        backdrop-filter: blur(10px);
+        padding: 20px;
+        border-radius: var(--border-radius);
+        border-top-right-radius: 0;
+        border-top-left-radius: 0;
+
+        pointer-events: all;
+        overflow-y: visible;
+
+        .chat-panel {
+          width: 100%;
+
+          display: flex;
+          flex-direction: column;
+          justify-content: end;
+          gap: 20px;
+
+          pointer-events: all;
+
+          .chat-message {
+            display: flex;
+            flex-direction: row;
+            align-items: start;
+            justify-content: start;
+            gap: 20px;
+
+            width: 100%;
+
+            flex: 1;
+
+            .chat-message-profile {
+              background-color: #14616abb;
+              backdrop-filter: blur(20px);
+              border-radius: 50px;
+              padding: 10px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+
+              width: 60px;
+
+              img {
+                width: 100px;
+              }
+            }
+
+            .chat-message-text {
+              flex: 0.7;
+
+              background-color: #14616abb;
+              backdrop-filter: blur(20px);
+              padding: 20px;
+              border-radius: var(--border-radius);
+
+              font-size: 18px;
+              font-weight: 400;
+
+              color: var(--text-color);
+            }
+
+            &.user {
+              align-items: start;
+              justify-content: end;
+              .chat-message-profile {
+                background-color: #15426abb;
+              }
+
+              .chat-message-text {
+                background-color: #15426abb;
+              }
+            }
+          }
+        }
+      }
+
+      &.not-really {
+        opacity: 0;
+        bottom: -100px;
+        pointer-events: none;
+
+        .x-button {
+          pointer-events: none;
+        }
+
+        .chat-full {
+          pointer-events: none;
+
+          .chat-panel {
+            pointer-events: none;
+          }
+        }
+      }
     }
   }
 }
