--- a/src/UI.scss
+++ b/src/UI.scss
@@ -374,10 +374,28 @@
                     cursor: pointer;
                   }
                 }
+
+                .hotspot-description {
+                  font-size: 18px;
+                  font-weight: 300;
+                  line-height: 26px;
+                  color: var(--text-color);
+                  padding-bottom: 40px;
+                }
               }
             }
           }
         }
+      }
+    }
+
+    .points {
+      position: absolute;
+      .point {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background-color: red;
       }
     }
 
@@ -636,6 +654,143 @@
 
               .chat-message-text {
                 background-color: #15426abb;
+              }
+            }
+          }
+
+          .chat-link {
+            display: flex;
+            flex-direction: row;
+            align-items: start;
+            justify-content: start;
+            gap: 20px;
+
+            width: 100%;
+
+            flex: 1;
+
+            .chat-message-profile {
+              background-color: #14616abb;
+              backdrop-filter: blur(20px);
+              border-radius: 50px;
+              padding: 10px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+
+              width: 60px;
+
+              img {
+                width: 100px;
+              }
+            }
+
+            .chat-link-container {
+              display: flex;
+              flex-direction: column;
+              gap: 10px;
+              background-color: #14616abb;
+              backdrop-filter: blur(20px);
+              padding: 20px;
+              border-radius: var(--border-radius);
+              .chat-link-planet {
+                overflow: visible;
+                font-family: var(--font-family);
+
+                pointer-events: all;
+                border: none;
+
+                color: white;
+
+                font-size: 18px;
+                font-weight: 500;
+
+                cursor: pointer;
+
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+
+                margin: 1px;
+
+                background-color: #2ec5d628;
+                backdrop-filter: blur(10px);
+
+                padding: 0px 20px;
+                height: 40px;
+                border-radius: var(--border-radius);
+
+                transition: all ease var(--transition-delay);
+
+                img {
+                  width: 14px;
+                }
+
+                &:hover {
+                  background-color: #14616a66;
+                  backdrop-filter: blur(10px);
+
+                  padding: 10px 20px;
+                  outline: 1px solid rgba(255, 255, 255, 0.8);
+                  border-radius: var(--border-radius);
+
+                  cursor: pointer;
+                }
+              }
+
+              .chat-link-hotspots-container {
+                display: flex;
+                flex-direction: row;
+                gap: 10px;
+
+                .chat-link-hotspot {
+                  overflow: visible;
+                  font-family: var(--font-family);
+
+                  pointer-events: all;
+                  border: none;
+
+                  color: var(--text-color);
+
+                  font-size: 18px;
+                  font-weight: 500;
+
+                  cursor: pointer;
+
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: center;
+                  align-items: center;
+                  gap: 10px;
+
+                  margin: 1px;
+
+                  background-color: #2ec5d628;
+                  backdrop-filter: blur(10px);
+
+                  padding: 0px 20px;
+                  height: 40px;
+                  border-radius: var(--border-radius);
+
+                  transition: all ease var(--transition-delay);
+
+                  img {
+                    width: 14px;
+                  }
+
+                  &:hover {
+                    background-color: #14616a66;
+                    backdrop-filter: blur(10px);
+
+                    padding: 10px 20px;
+                    outline: 1px solid rgba(255, 255, 255, 0.8);
+                    border-radius: var(--border-radius);
+
+                    cursor: pointer;
+                  }
+                }
               }
             }
           }
