--- a/src/UI.scss
+++ b/src/UI.scss
@@ -667,10 +667,10 @@
             flex: 1;
 
             .chat-message-profile {
-              background-color: #14616abb;
+              background-color: #9ca4bcbb;
               backdrop-filter: blur(20px);
               border-radius: 50px;
-              padding: 10px;
+              padding: 0px;
               display: flex;
               justify-content: center;
               align-items: center;
@@ -678,7 +678,7 @@
               width: 60px;
 
               img {
-                width: 100px;
+                width: 100%;
               }
             }
 
